--- a/style.css
+++ b/style.css
@@ -116,9 +116,17 @@ button:hover
     .container
     {
         flex-direction: column;
+        height: auto;
     }
     .cardside,.details
     {
         width: 90%;
+    }
+    summary
+    {
+        display: none;
+    }
+    .details{
+        margin-bottom: 20px;
     }
 }
