--- a/style.css
+++ b/style.css
@@ -137,6 +137,7 @@ button:hover
     h2
     {
         font-size: 1.5rem;
+        padding-top: 0;
     }
     .track
     {
@@ -146,4 +147,5 @@ button:hover
     {
         height: 280px;
     }
+
 }
